# panda_ws

./: README.md  info.txt
Da integrare/config/: franka_example_controllers.yaml
Da integrare/launch/: cart_and_pos.launch  joint_velocity_example_controller.launch  move_to_start.launch  move_to_start_custom.launch  vel_and_pos.launch
database_wires/: CMakeLists.txt  README.md  README_TAU.md  package.xml
database_wires/data/gearbox_demo/: .~lock.PROGETTO WIRES_2_244_IEMA_HILL_Schema_Morsetti.xlsx#  .~lock.PROGETTO_WIRES_SCHEMA_MORSETTI.ods#  .~lock.gearbox_demo_ids.wri#  Component_tf.xml  PROGETTO WIRES_2_244_IEMA40_Distinta_Componenti.xlsx  PROGETTO WIRES_2_244_IEMA40_Distinta_riepilogata.xlsx  PROGETTO WIRES_2_244_IEMA_HILL_Schema_Morsetti.xlsx  PROGETTO WIRES_2_244_Lista_cablaggio.xlsm  PROGETTO_WIRES_SCHEMA_MORSETTI.ods  cablaggio.csv  components_ids_marker_table.ods  gearbox_demo_ids.wri  gearbox_demo_pins.xml
database_wires/data/gearbox_zero/: Component_tf.xml  PROGETTO WIRES_244_IEMA_HILL_Distinta_Componenti.xls  PROGETTO WIRES_244_IEMA_HILL_Distinta_Componenti.xlsx  PROGETTO WIRES_244_IEMA_HILL_Distinta_riepilogata.xlsx  PROGETTO WIRES_244_IEMA_HILL_Distinta_riepilogata_COPPIE DI SERRAGGIO.xlsx  PROGETTO WIRES_244_IEMA_HILL_Lista_cablaggio.csv  PROGETTO WIRES_244_IEMA_HILL_Lista_cablaggio.xlsx  PROGETTO WIRES_244_IEMA_HILL_Schema_Morsetti.xlsx  gearbox00001_dispatch.xml  gearbox00001_ids.txt  gearbox00001_ids.wri  gearbox00001_parts.xml  gearbox00001_wiring.xml
database_wires/data/remodel/: Q1_simplified_ids.wri  Q1_simplified_ids_olds.wri  TEST1_REMODEL_DISTINTA COMPONENTI.xlsx  TEST1_REMODEL_DISTINTA RIEPILOGATA.xlsx  TEST1_REMODEL_KOMAX.csv  TEST1_REMODEL_KOMAX.xlsm  TEST1_REMODEL_Schema Morsetti.xlsm  TEST1_REMODEL_Sommario Morsettiere.xlsm
database_wires/launch/: dual_arm_demo.launch  franka_database.launch  franka_ruotato.launch  remodel_demo.launch  transform.launch  uc1_database.launch  wires_demo.launch
database_wires/msg/: cad_connection.msg  cad_pins.msg
database_wires/scripts/: gearbox_handler.py  gearbox_handler_cabling.py  gearbox_handler_remodel.py  gearbox_handler_wires.py  gearbox_handler_wires_2.py
database_wires/scripts/database_wiress/param/: global_parameters.py
database_wires/scripts/database_wiress/partdb/: cad.py  data_dictionaries.py  gearbox_reference_handler.py  proxy.py
database_wires/scripts/database_wiress/utils/: ros.py  transformations.py
database_wires/srv/: DataSrv.srv  IkSrv.srv  StringSrv.srv  cad_data.srv  cad_info.srv  cad_pose.srv  connection_data.srv  connection_group.srv  moveit_parameters.srv  pin_data.srv  terminal_data.srv
devel/: .catkin  local_setup.sh  setup.sh
franka_controllers/: CMakeLists.txt  franka_controllers_plugin.xml  package.xml
franka_controllers/action/: force_threshold.cfg
franka_controllers/config/: franka_controllers.yaml
franka_controllers/launch/: force_gravity_controller.launch
franka_controllers/src/: force_gravity_controller.cpp  joint_velocity_controller.cpp  reduce_reflex.cpp
franka_driver/panda_schunk_moveit_config/: package.xml
franka_ros/franka_control/: CMakeLists.txt
gripper_control/: CMakeLists.txt
gripper_control/include/: GP_Functions.h
gripper_control/launch/: gripper_controlHMI.launch  gripper_controller.launch
gripper_control/msg/: ControlOutput.msg
gripper_control/src/: TactileSensorGrasp.cpp  auto_gripper_control_node.cpp  auto_gripper_control_node_lowlevel.cpp  gripper_controller_franka.cpp  gripper_controller_schunk.cpp  manual_gripper_node.cpp
my_franka_controller/: CMakeLists.txt  README.md  franka_robot_controllers_plugin.xml  package.xml
my_franka_controller/config/: my_franka_controllers.yaml
planner/: CMakeLists.txt  package.xml
planner/action/: PlanTrajectory.action
planner/include/: TrajectoryPlanner.h  TrajectoryPlanner.hpp  UC2_lib.h  not_used_RIP.h
planner/launch/: test.launch
planner/src/: CMakeLists.txt  TrajectoryPlanner.cpp  UC2_lib.cpp  planning_action_server.cpp  test.cpp  test_planner.cpp
planner/src/PointList/: TactileSensorInput
robot_task/: CMakeLists.txt
robot_task/include/: MyFunc.h
robot_task/launch/: EE_prova.launch  ForceTest.launch  active_controll.launch  cable_routing.launch  gripper_test.launch  point_plotter.launch  static_grap.launch
robot_task/old_task/: PID_test.cpp  franka_gripper_test.cpp  test_correlazione_sensore.cpp
robot_task/src/: Parameter  Prove_tattili.cpp  active_control.cpp  cable_routing.cpp  example_collision_object.cpp  point_plot.cpp  static_grasp.cpp  static_grasp_cyclic.cpp  static_grasp_orientamento.cpp  static_grasp_orientamento_cyclic.cpp
robot_task/src/PointList/: CableA  CableB  CableC
robot_task/srv/: getGraspPose.srv
schunk_pg70/launch/: pg70_standalone.rviz  (+1 more)
src/gripper_control/: package.xml
src/gripper_control/include/: MyFunc.h
src/gripper_control/launch/: grasp_control.launch  gripper.launch  gripper_schunk.launch  test_gripper.launch
src/gripper_control/src/: gripper_controller_schunk.cpp
tactile_sensor/: README.md
tactile_sensor/read_sensor/: CMakeLists.txt
tactile_sensor/read_sensor/src/: TactileSensor.cpp  read_sensor.cpp  tactile_data_read.cpp
test/: CMakeLists.txt
test/include/: MyFunc.h  PID.h
test/launch/: EE_prova.launch  ForceTest.launch  FrankaLaunchControl.launch  active_controll.launch  cable_routing.launch  gripper_test.launch  path_test.launch
test/msg/: ControlOutput.msg
test/src/: PID_test.cpp  Prove_tattili.cpp  active_control.cpp  cable_routing.cpp  force_test.cpp  gripper_test.cpp  schunk_test.cpp  test.cpp  test2.cpp  test2_1.cpp  test_correlazione_sensore.cpp  test_scaler.cpp  velocity_test.cpp
test/src/PointList/: Active  First  Harness_test  Harness_test2  Routing  Second  line
test/src/Results&Logs/: Panda_filled  Panda_log_Plan_Scaled  Panda_log_Plan_Scaled2  Panda_log_Plan_Scaled_con_primo_punto  Panda_log_SetPose  Panda_log_cartesian  ScaledDavide  ScaledDeriv
test/src/old/: EE_orientation.cpp  LetFile_V2.cpp  Pull_test.cpp  RotationTest.cpp  triple_wire.cpp
vision/: CMakeLists.txt  package.xml
(+419 files in other folders)
