<?xml version="1.0"?>
<package format="2">
  <name>gripper_control</name>
  
  <version>0.0.0</version>
  
  <description>The traj_control package</description>
  
  <maintainer email="kevin@todo.todo">kevin</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>libfranka</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>franka_hw </depend>
  <depend>sensor_msgs</depend>
  <depend>xmlrpcpp</depend>
  <depend>actionlib_msgs</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
